<resources>
    <string name="app_name">IntheBeningin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="send_btn">Send</string>
    <string name="reply_btn">Reply</string>
    <string name="yes_message">ARTICLE: Like</string>
    <string name="no_message">ARTICLE: Thanks</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="question_article">LIKE THE ARTICAL?</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="book">Book</string>
    <string name="team_1">TEAM 1</string>
    <string name="team_2">TEAM 2</string>
    <string name="zero">0</string>
    <string name="tab_1">TAB 1</string>
    <string name="tab_2">TAB 2</string>
    <string name="tab_3">TAB 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_website">OPEN WEBSITE</string>
    <string name="open_location">OPEN LOCATION</string>
    <string name="share_this_text">SHARE THIS TEXT</string>
    <string name="graph">a written or printed work consisting of pages glued or sewn together along one side and bound in covers.</string>
    <string name="mode_sw">Mode SW</string>
    <string name="day_mode">DAY MODE</string>
    <string name="night_mode">NIGHT MODE</string>
    <string name="dialog_message">Click OK to continue or Cancel to stop.</string>
    <string name="alert_title">Alert</string>
    <string name="ok">OK</string>
    <string name="pressed_ok">Pressed OK</string>
    <string name="cancel">Cancel</string>
    <string name="pressed_cancel">Pressed Cancel</string>
    <string name="date_message">Chosen date: day %1$d, month %2$d, year %3$d</string>
    <string name="pick_date">Pick Date</string>
    <string name="something">Something</string>
</resources>
