<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ex6.SimpleFragment">

    <!-- TODO: Update blank fragment layout -->
    <RadioGroup
        android:id="@+id/radio_group"
        app:layout_constraintStart_toEndOf="@id/text_frag"
        app:layout_constraintTop_toTopOf="@id/text_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_8"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radio_button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/no" />
    </RadioGroup>
    <TextView
        android:id="@+id/text_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/question_article"/>
</androidx.constraintlayout.widget.ConstraintLayout>
