<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ex5.Ex5Activity">
    

    <EditText
        android:id="@+id/edt_weblink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_open_web"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/open_website"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_weblink" />
    <EditText
        android:id="@+id/edt_map_location"
        app:layout_constraintTop_toBottomOf="@id/btn_open_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:text="@string/open_location"
        android:id="@+id/btn_open_map"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_map_location"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/edt_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_open_map" />

    <Button
        android:text="@string/share_this_text"
        android:id="@+id/btn_share_text"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_text" />
    
</androidx.constraintlayout.widget.ConstraintLayout>
